Adds a picture-sending functionnality.

--- a/static/chat.html
+++ b/static/chat.html
@@ -8,7 +8,12 @@
 <div id="error"></div>
 <div id="phase2" style="opacity:0">
     <div id="messages"></div>
+    <form id="form">
+    <div>
+        <input id="pics" type="file" accept="image/x-png, image/gif, image/jpeg"/>
+    </div>
     <textarea id="msg"></textarea>
-    <br/><button id="send">Send</button>
+    </form>
+    <button id="send">Send</button>
 </div>
 
